# cpp-cpu-app

./: .gitignore  CMakeLists.txt  README.md
dockerfiles/: DockerfileBase
src/: Main.cpp  RunnerDetector.cpp
